# all-apis

./: .gitignore  LICENSE  README.md  todo.md
app/: .env  .eslintrc.js  App.tsx  package-lock.json  package.json
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/assets/: index.android.bundle
app/icons/: delete.tsx
app/ios/: Podfile
app/ios/ReactNativeExample.xcodeproj/: project.pbxproj
app/todo/: todo.tsx
common/: todos.json
go-api/: main.go
js-api/: .env  db.sql  package-lock.json  package.json  todo.md  tsconfig.json
js-api/src/: database.ts  index.ts  todo.ts
js-api/src/todo/: controller.ts
python-api/: README.md
python-api/app/app/: settings.py  urls.py
python-api/app/core/: admin.py  models.py
python-api/app/core/migrations/: 0001_initial.py
python-api/app/todo/: serializers.py  views.py
python-api/app/user/: serializers.py  urls.py  views.py
rust-api/: .env  Cargo.toml
rust-api/src/: main.rs
