[package]
name = "rust-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3" 
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-async-std-native-tls"] }
dotenv = "0.15.0"